--- a/frases_do_dia/pubspec.yaml
+++ b/frases_do_dia/pubspec.yaml
@@ -45,8 +45,7 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
-    - images/mesa.jpg
-    - images/parque.jpg
+    - images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
