--- a/atm_consultoria/pubspec.yaml
+++ b/atm_consultoria/pubspec.yaml
@@ -1,4 +1,4 @@
-name: navegacao
+name: atm_consultoria
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -19,11 +19,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+
+  #ilustrações gratis
+  undraw: ^1.0.1
+
+  # Carousel Slider
+  # https://pub.dev/packages/carousel_slider
+  # Topp!!
+  carousel_slider: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -42,8 +49,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+   - images/logo.png
+   - images/menu_servico.png
+   - images/menu_empresa.png
+   - images/menu_contato.png
+   - images/menu_cliente.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
