--- a/lista_tarefas/pubspec.yaml
+++ b/lista_tarefas/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   undraw: ^1.0.1
+  path_provider: ^1.2.0
+
 
 dev_dependencies:
   flutter_test:
