--- a/aprenda_ingles/pubspec.yaml
+++ b/aprenda_ingles/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  audioplayers: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -41,9 +42,34 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   #imagens
+   - assets/images/cao.png
+   - assets/images/gato.png
+   - assets/images/leao.png
+   - assets/images/macaco.png
+   - assets/images/ovelha.png
+   - assets/images/vaca.png
+   - assets/images/1.png
+   - assets/images/2.png
+   - assets/images/3.png
+   - assets/images/4.png
+   - assets/images/5.png
+   - assets/images/6.png
+   #audios
+   - assets/audios/cao.mp3
+   - assets/audios/gato.mp3
+   - assets/audios/leao.mp3
+   - assets/audios/macaco.mp3
+   - assets/audios/ovelha.mp3
+   - assets/audios/vaca.mp3
+   - assets/audios/1.mp3
+   - assets/audios/2.mp3
+   - assets/audios/3.mp3
+   - assets/audios/4.mp3
+   - assets/audios/5.mp3
+   - assets/audios/6.mp3
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
