--- a/whatsapp/pubspec.yaml
+++ b/whatsapp/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_auth: ^0.14.0+1
   cloud_firestore: ^0.12.9
   firebase_storage: ^3.0.5
+  image_picker: ^0.6.1+2 
 
 dev_dependencies:
   flutter_test:
