--- a/whatsapp/pubspec.yaml
+++ b/whatsapp/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
   assets:
    - images/logo.png
    - images/usuario.png
+   - images/bg.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
