--- a/mapas_geolocalizacao/android/app/src/main/AndroidManifest.xml
+++ b/mapas_geolocalizacao/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mapas_geolocalizacao">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -10,6 +14,9 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="mapas_geolocalizacao"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDxG8EbJOkZU1qq8wn9ZEE5vdDYKxoks_Q" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -29,7 +36,5 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyD0P8_PgIPqGVZiNabBQ_5-d1e20LwVA-E"/>
     </application>
 </manifest>
