--- a/mapas_geolocalizacao/ios/Runner/Info.plist
+++ b/mapas_geolocalizacao/ios/Runner/Info.plist
@@ -43,5 +43,7 @@
 	<false/>
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Este aplicativo precisa de acesso do seu local quando aberto.</string>
 </dict>
 </plist>
