--- a/mapas_geolocalizacao/pubspec.yaml
+++ b/mapas_geolocalizacao/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   google_maps_flutter: ^0.5.20+6
+  geolocator: ^5.1.3
 
 dev_dependencies:
   flutter_test:
