Configurando mapa & exibindo marcador

--- a/minhas_viagens/android/app/src/main/AndroidManifest.xml
+++ b/minhas_viagens/android/app/src/main/AndroidManifest.xml
@@ -29,5 +29,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+                   android:value="AIzaSyDJn7ICNkS1KhuYMDXKAcfijmwZ4373smk"/>
     </application>
 </manifest>
