--- a/minhas_viagens/pubspec.yaml
+++ b/minhas_viagens/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   google_maps_flutter: ^0.5.21
+  geolocator: ^5.1.3
+  firebase_core: ^0.4.0+9
+  cloud_firestore: ^0.12.9+2
 
 dev_dependencies:
   flutter_test:
