--- a/uber/android/app/src/main/AndroidManifest.xml
+++ b/uber/android/app/src/main/AndroidManifest.xml
@@ -29,5 +29,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyB5q-1nHhtSGov_iEgddYy2_vbjcL35PZ8"/>
+
     </application>
 </manifest>
