--- a/uber/pubspec.yaml
+++ b/uber/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+4
+  google_maps_flutter: ^0.5.21+3
+
 
 dev_dependencies:
   flutter_test:
