exibindo local do usuário :mag:

--- a/uber/ios/Runner/Info.plist
+++ b/uber/ios/Runner/Info.plist
@@ -43,5 +43,11 @@
 	<false/>
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Precisamos de acesso a sua localização para utilizar o App.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Precisamos de acesso a sua localização em plano de fundo para recuper sua localização.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Precisamos de acesso a sua localização completa para utilizar o App.</string>
 </dict>
 </plist>
