--- a/uber/pubspec.yaml
+++ b/uber/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+4
   google_maps_flutter: ^0.5.21+3
-
+  geolocator: ^5.1.3
 
 dev_dependencies:
   flutter_test:
