exibindo icone de passageiro

--- a/uber/pubspec.yaml
+++ b/uber/pubspec.yaml
@@ -49,6 +49,8 @@ flutter:
   assets:
    - images/fundo.png
    - images/logo.png
+   - images/motorista.png
+   - images/passageiro.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
