--- a/uber/pubspec.yaml
+++ b/uber/pubspec.yaml
@@ -51,6 +51,7 @@ flutter:
    - images/logo.png
    - images/motorista.png
    - images/passageiro.png
+   - images/destino.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
