--- a/uber/pubspec.yaml
+++ b/uber/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cloud_firestore: ^0.12.9+4
   google_maps_flutter: ^0.5.21+3
   geolocator: ^5.1.3
+  intl: ^0.16.0
 
 dev_dependencies:
   flutter_test:
